--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Clientes – CRUD (Node + MySQL)</title>
+  <title>Clientes – Frontend (GitHub Pages)</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
     <h1>Gestión de Clientes</h1>
-    <p>Frontend estático para GitHub Pages. Conecta a tu API en Render.</p>
+    <p>Frontend estático para consumir la API en Render (PostgreSQL).</p>
   </header>
 
   <main>
@@ -17,39 +17,45 @@
       <h2>Nuevo Cliente</h2>
       <form id="create-form">
         <div class="row">
-          <label>Nombre</label>
+          <label for="nombre">Nombre</label>
           <input id="nombre" required />
         </div>
         <div class="row">
-          <label>Email</label>
+          <label for="email">Email</label>
           <input id="email" type="email" required />
         </div>
         <div class="row">
-          <label>Teléfono</label>
+          <label for="telefono">Teléfono</label>
           <input id="telefono" />
         </div>
         <button type="submit">Crear</button>
       </form>
+      <p id="create-msg" class="msg"></p>
     </section>
 
     <section class="card">
       <div class="flex">
-        <h2>Listado</h2>
+        <h2>Listado de Clientes</h2>
         <button id="refresh">Refrescar</button>
       </div>
       <table id="clientes-table">
         <thead>
           <tr>
-            <th>ID</th><th>Nombre</th><th>Email</th><th>Teléfono</th><th>Acciones</th>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Teléfono</th>
+            <th>Creado</th>
           </tr>
         </thead>
         <tbody></tbody>
       </table>
+      <p id="list-msg" class="msg"></p>
     </section>
   </main>
 
   <footer>
-    <small>Ingeniería Web 1 – Guía No. 2 • Node.js + Express + MySQL</small>
+    <small>Frontend estático – GitHub Pages • API en Render</small>
   </footer>
 
   <script src="config.js"></script>
