Revise title and description in index.html
Updated the title and description for clarity.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Clientes – Frontend (GitHub Pages)</title>
+  <title>Clientes – Frontend CRUD (GitHub Pages)</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
     <h1>Gestión de Clientes</h1>
-    <p>Frontend estático para consumir la API en Render (PostgreSQL).</p>
+    <p>Frontend estático para API en Render (PostgreSQL): crear, listar, editar y eliminar.</p>
   </header>
 
   <main>
@@ -46,6 +46,7 @@
             <th>Email</th>
             <th>Teléfono</th>
             <th>Creado</th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody></tbody>
